# arc

./: .gitignore  .gitmodules  .scalafmt.conf  README.md  arc  build  build.sbt  check-for-broken-links  check-for-dirty-tree  index.html  robots.txt  scalastyle-config.xml  sitemap.xml  wordcount.arc
arc-codegen/: Cargo.toml
arc-codegen/arcon/: Cargo.toml
arc-codegen/arcon/macros/: Cargo.toml
arc-codegen/local/: Cargo.toml
arc-codegen/local/macros/: Cargo.toml
arc-codegen/local/src/: lib.rs
arc-codegen/shared/: Cargo.toml
arc-codegen/shared/src/: conversions.rs  enums.rs  functions.rs  structs.rs  values.rs
arc-codegen/src/: lib.rs
arc-codegen/tests/: rewrite.rs  rewrite_task.rs
arc-lang/: Cargo.toml  dune-project  dune-wrapper
arc-lang/crates/colors/: Cargo.toml
arc-lang/crates/compiler/: Cargo.toml
arc-lang/crates/config/: Cargo.toml
arc-lang/crates/logging/: Cargo.toml
arc-lang/crates/manager/: Cargo.toml
arc-lang/crates/repl/: Cargo.toml
arc-lang/crates/runtime/: Cargo.toml
arc-lang/crates/tree-sitter/: Cargo.toml  binding.gyp  grammar.js  package.json
arc-lang/crates/version/: Cargo.toml
arc-lang/crates/website/: config.toml
arc-lang/etc/: Cargo.toml.template
arc-lang/examples/: assign.arc  assign.arc.rust-tests  basic.arc  binopref.arc  binops.arc  blocks.arc  body.arc  closure.arc  comprehensions.arc  empty.arc  enum-patterns.arc  enum.arc  even-odd.arc  fail-task-map.arc  fail-task-termination.arc  fib-functional.arc  fib-imperative.arc  file-to-file.arc  filter-orders.arc  generic-enum.arc  generic-function.arc  global.arc  identity-function.arc  inferred.arc  interpolate.arc  interpolate.arc.rust-tests  interpreter.arc  lambda.arc  lvalues.arc  manual.rs  modules.arc  monoid.arc  names.arc  never.arc  open-records.arc  overload-plus.arc  parallelism.arc  params.arc  paths.arc  placeholder.arc  (+38 more)
arc-lang/examples/input/: random.sh
arc-lang/examples/models/: download-imagenet.py  download-resnet18.py  download-yolov8.py
arc-lang/examples/output/: numbers-plus-one.csv
arc-lang/examples/task-map.crate/: Cargo.toml
arc-lang/examples/todo/: operators.arc  predict.arc  scoping.arc  wordcount.arc
arc-lang/lib/: dune
arc-lang/programs/: async.arc  basic.arc  compr.arc  cql.arc  dumb.arc  enum.arc  fib.arc  generic.arc  id-fun.arc  id-task.arc  id.arc  identity.arc  open-records.arc
arc-lang/src/: args.ml  ast.ml  ast_to_hir.ml  ast_to_ir1.ml  debug.ml  declare.ml  dune  error.ml  gen.ml  graph.ml  hir.ml  hir_to_mir.ml  infer.ml  infer_ir1.ml  intrinsics.ml  ir1.ml  ir1_to_ir2.ml  ir2.ml  ir2_to_ir3.ml  ir3.ml  ir3_to_mlir.ml  lexer.mll  lower.ml  main.ml  main.rs  mir.ml  mir_to_mlir.ml  mir_to_rust.ml  mlir.ml  monomorphise.ml  parser.mly  pretty.ml  pretty_ast.ml  pretty_hir.ml  pretty_ir1.ml  pretty_ir2.ml  pretty_ir3.ml  pretty_mir.ml  pretty_mlir.ml  pretty_table.ml  (+5 more)
arc-lang/stdlib/: stdlib.arc  stdlib.mlir
arc-lang/test/: basic.ml  dune
arc-lang/tests/: verify_builtins.rs
arc-mlir/src/: CMakeLists.txt  Main.cpp  arc-dialect.cpp  arc-opts.cpp  arc-opts.td  arc-to-mlir.in  main.cpp
arc-mlir/src/include/: CMakeLists.txt
arc-mlir/src/lib/: ArcOptMain.cpp  (+5 more)
arc-runtime/: Cargo.toml
arc-runtime/macros/: Cargo.toml
arc-runtime/src/: context.rs  control.rs  dispatch.rs  lib.rs  macros.rs  manager.rs  operators.rs  runtime.rs  state.rs  timer.rs  wasm.rs
arc-runtime/tests/: allocation.rs  basic.rs  closures.rs  context.rs  externs.rs  functions.rs  future.rs  gc.rs  generic_enum_rewrite.rs  generic_struct_rewrite.rs  nonpersistent_task.rs  persistent_task.rs  serde.rs  source_map_log.rs  tasks.rs  types.rs
arc-script/: Cargo.toml  README.md  book.toml  build.rs  check-commits.sh  check-workspace.sh  deny.toml  rust-toolchain  rustfmt.toml
arc-script-old/cli/: Cargo.toml
arc-script-old/fuzz/: Cargo.toml
arc-script-old/runtime/: Cargo.toml
arc-script/.cargo/: config
arc-script/api/: README.md
arc-script/arc-script-bench/: Cargo.toml
arc-script/arc-script-bridge/: Cargo.toml
arc-script/arc-script-build/: Cargo.toml
arc-script/arc-script-cli/: Cargo.toml
arc-script/arc-script-core/: Cargo.toml  build.rs
arc-script/arc-script-lsp/: Cargo.toml
arc-script/arc-script-macros/: Cargo.toml
arc-script/arc-script-python/: Cargo.toml
arc-script/arc-script-quote/: Cargo.toml
arc-script/arc-script-repl/: Cargo.toml
arc-script/arc-script-stdlib/: Cargo.toml
arc-script/arc-script-template/: Cargo.toml
arc-script/arc-script-test-insta/: Cargo.toml
arc-script/arc-script-test-integration/: Cargo.toml  build.rs
arc-script/arc-script-test-trybuild/: Cargo.toml
arc-script/arc-script-web/: Cargo.toml
arc-script/arc-script-web-lsp/: .gitignore  Cargo.toml
arc-script/arc-script-web-repl/: Cargo.toml
arc-script/benches/: Cargo.toml  bench.rs
arc-script/codegen/: Cargo.toml
arc-script/compiler/: Cargo.toml
arc-script/core/: Cargo.toml  build.rs
arc-script/examples/: emit.rs  foo.arc-script
arc-script/fuzz/: Cargo.toml
arc-script/lsp/: Cargo.toml
arc-script/runtime/: README.md
arc-script/src/: ast.rs  connector.rs  database.rs  error.rs  eval.rs  grammar.lalrpop  info.rs  io.rs  lexer.rs  lib.rs  linter.rs  lsp.rs  main.rs  manifest.rs  mlir.rs  opt.rs  parser.rs  prelude.rs  pretty.rs  provider.rs  pruner.rs  repl.rs  resolver.rs  shaper.rs  ssa.rs  symbols.rs  typer.rs  utils.rs
arc-script/stdlib/: task-todo.arc
arc-script/tests/: goldentests.rs  if.arc-script  imap.arc-script  literals.arc-script  simple.arcs
arc-script/wasm/: Cargo.toml
arc-sys/client/: Cargo.toml  build.rs
arc-sys/coordinator/: Cargo.toml  build.rs
arc-sys/dataflow/: Cargo.toml
arctime/: Cargo.toml
arctime/macros/: Cargo.toml
arctime/src/: channel.rs  client.rs  control.rs  data.rs  epochs.rs  executor.rs  lib.rs  loops.rs  pipeline.rs  port.rs  sink.rs  source.rs  stream.rs  task.rs  timer.rs  transform.rs
arctime/tests/: datagen.rs  pipeline.rs  taskgen.rs
mlir-dialect-experiments/: CMakeLists.txt
mlir-dialect-experiments/exec-mlir-from-rust/: Cargo.toml  Makefile  build.rs
(+2387 files in other folders)
