cargo-features = [
  "strip" # Allow stripping symbols / debuginfo from binary
]

[package]
name           = "arc-script"
version        = "0.0.0"
authors        = [
  "Klas Segeljakt <klasseg@kth.se>",
  "Frej Drejhammar <frej.drejhammar@ri.se>"
]
edition        = "2018"
description    = "The Arc-Script Programming Language."
documentation  = "https://segeljakt.github.io/arc-script/"
readme         = "README.md"
homepage       = "https://cda-group.github.io/"
repository     = "https://www.github.com/segeljakt/arc-script"
license        = "MIT"
# license-file   = "" TODO
keywords       = ["compiler", "data-science"]
categories     = ["science", "database"]
publish        = false

[lib]
name = "arc_script"
path = "src/lib.rs"

[dependencies]
arc-script-bridge = { version = "=0.0.0", path = "arc-script-api/bridge" }
arc-script-build  = { version = "=0.0.0", path = "arc-script-api/build" }
arc-script-arcorn = { version = "=0.0.0", path = "arc-script-api/arcorn" }

[workspace]
members = [
  "arc-script-core",
  "arc-script-core/src/shared",
  "arc-script-core/src/macros",
  "arc-script-api/quote",
  "arc-script-api/bridge",
  "arc-script-api/python",
  "arc-script-api/build",
  "arc-script-api/arcorn",
  "arc-script-api/arcorn/macros",
  "arc-script-repl",
  "arc-script-lsp",
  "arc-script-cli",
  "arc-script-web-repl",
#   "arc-script-web-lsp",
  "arc-script-test/compile",
  "arc-script-test/integration/dynamic",
  "arc-script-test/integration/dynamic-cached",
  "arc-script-test/bench",
  "arc-script-test/template",
  "arc-script-test/stdlib",
]
default-members = [
  "arc-script-core",
  "arc-script-core/src/shared",
  "arc-script-core/src/macros",
  "arc-script-api/quote",
  "arc-script-api/bridge",
  "arc-script-api/python",
  "arc-script-api/build",
  "arc-script-api/arcorn",
  "arc-script-api/arcorn/macros",
  "arc-script-repl",
  "arc-script-lsp",
  "arc-script-cli",
  "arc-script-web-repl",
#   "arc-script-web-lsp",
  "arc-script-test/compile",
  "arc-script-test/integration/dynamic",
  "arc-script-test/integration/dynamic-cached",
  "arc-script-test/bench",
  "arc-script-test/template",
  "arc-script-test/stdlib",
]

exclude = [
  "fuzz",
#   "arc-script-web-repl",
  "arc-script-web-lsp"
]

# -- The development profile, used for `cargo build`.
[profile.dev]
opt-level        = 0
debug            = 2
debug-assertions = true
overflow-checks  = true
lto              = false
panic            = 'unwind'
incremental      = true
codegen-units    = 256
rpath            = false

# -- The release profile, used for `cargo build --release`.
[profile.release]
opt-level        = 3
debug            = 0
debug-assertions = false
overflow-checks  = false
lto              = true
panic            = 'unwind'
incremental      = false
codegen-units    = 1
rpath            = false
strip            = "symbols"

# -- The testing profile, used for `cargo test`.
[profile.test]
opt-level        = 0
debug            = 2
debug-assertions = true
overflow-checks  = true
lto              = false
# panic            = 'unwind'
incremental      = true
codegen-units    = 256
rpath            = false

# -- The benchmarking profile, used for `cargo bench`.
[profile.bench]
opt-level        = 3
debug            = 0
debug-assertions = false
overflow-checks  = false
lto              = true
# panic            = 'unwind'
incremental      = false
codegen-units    = 1
rpath            = false
strip            = "symbols"

# --- Optimize for small binaries when compiling for the web
[profile.release.package.arc-script-web-repl]
opt-level = "z"

# [profile.release.package.arc-script-web-lsp]
# opt-level = "z"
