cargo-features = [
#   "strip" # Allow stripping symbols / debuginfo from binary
]

[package]
name          = "arc-script"
version       = "0.0.0"
authors       = [
  "Klas Segeljakt <klasseg@kth.se>",
  "Frej Drejhammar <frej.drejhammar@ri.se>"
]
edition       = "2018"
description   = "The Arc-Script Programming Language."
documentation = "https://segeljakt.github.io/arc-script/"
readme        = "README.md"
homepage      = "https://cda-group.github.io/"
repository    = "https://www.github.com/segeljakt/arc-script"
license       = "MIT"
keywords      = ["compiler", "data-science"]
categories    = ["science", "database"]
publish       = false

[lib]
name = "arc_script"
path = "src/lib.rs"

[features]
proc          = ["arc-script-api-include/proc"]
backend_arcon = ["arc-script-codegen/backend_arcon"]
backend_local = ["arc-script-codegen/backend_local"]
default       = ["backend_local"]

[dependencies]
arc-script-api-include = { version = "=0.0.0", path = "api/include" }
arc-script-codegen     = { version = "=0.0.0", path = "codegen" }

[workspace]
members = [
  "compiler",
  "compiler/shared",
  "compiler/macros",
  "api/quote",
  "api/include/proc",
  "api/build",
  "api/include",
  "codegen",
  "repl",
  "lsp",
  "cli",
  "website/repl",
  "tests/unit",
  "benches",
  "runtime",
  # "api/python",
  # "website/web-lsp",
]

# The most important crates
default-members = [
  "compiler",
  "compiler/shared",
  "compiler/macros",
  "api/build",
  "api/include",
  "codegen",
  "repl",
  "cli",
  "runtime",
  # "api/include/proc",
  # "lsp",
  # "api/quote",
  # "benches",
  # "website/repl",
  # "arc-script-api/python",
  # "website/lsp",
  # "tests/compile",
  # "tests/integration/basic",
]

exclude = [
  "tests/integration/basic",
  "fuzz",
  "website/lsp",
  "api/python",
  # "website/repl",
]

# -- The development profile, used for `cargo build`.
[profile.dev]
opt-level        = 0
debug            = 2
debug-assertions = true
overflow-checks  = true
lto              = false
panic            = 'unwind'
incremental      = true
codegen-units    = 256
rpath            = false

# -- The release profile, used for `cargo build --release`.
[profile.release]
opt-level        = 3
debug            = 0
debug-assertions = false
overflow-checks  = false
lto              = true
panic            = 'unwind'
incremental      = false
codegen-units    = 1
rpath            = false
# strip            = "symbols"

# -- The testing profile, used for `cargo test`.
[profile.test]
opt-level        = 0
debug            = 2
debug-assertions = true
overflow-checks  = true
lto              = false
# panic            = 'unwind'
incremental      = true
codegen-units    = 256
rpath            = false

# -- The benchmarking profile, used for `cargo bench`.
[profile.bench]
opt-level        = 3
debug            = 0
debug-assertions = false
overflow-checks  = false
lto              = true
# panic            = 'unwind'
incremental      = false
codegen-units    = 1
rpath            = false
# strip            = "symbols"

# --- Optimize for small binaries when compiling for the web
[profile.release.package.arc-script-website-repl]
opt-level = "z"

# [profile.release.package.arc-script-website-lsp]
# opt-level = "z"
