[package]
name = "arctime"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

[lib]
name = "arctime"
path = "src/lib.rs"

[dependencies]
arctime_macros = { path = "./macros" }
kompact        = { git = "https://github.com/kompics/kompact", features = ["type_erasure"] }
paste          = { version = "1.0.5" }
slog           = { version = "2.7.0" }
coz            = { version = "0.1.3" }
time           = { version = "0.2.26", features = ["rand", "deprecated"] }
arrayvec       = { version = "0.7.0" }
hierarchical_hash_wheel_timer = { version = "1.0.0" }
uuid           = { version = "0.8.2" }
