[package]
name = "arc-codegen-local"
version = "0.0.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"
description = "A bridge between MLIR and the local runtime."
license = "MIT"

[dependencies]
arc-runtime              = { version = "=0.0.0", path = "../../arc-runtime" }
arc-codegen-local-macros = { version = "=0.0.0", path = "./macros" }
