[package]
name    = "fuzz"
version = "0.0.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "parse"
path = "fuzz-targets/parse.rs"

[dependencies]
arc-script-compiler = { version = "=0.0.0", path = "../compiler" }
libfuzzer-sys       = { version = "0.3.5" }
