[package]
name        = "arc-script-runtime"
version     = "0.0.0"
authors     = ["Klas Segeljakt <klasseg@kth.se>"]
edition     = "2018"
description = "A local runtime for arc-script"

[lib]
name = "runtime"
path = "src/lib.rs"

[dependencies]
kompact                       = { git = "https://github.com/segeljakt/kompact", features = ["type_erasure"] }
paste                         = { version = "1.0.5" }
slog                          = { version = "2.7.0" }
coz                           = { version = "0.1.3" }
time                          = { version = "0.2.26", features = ["rand", "deprecated"] }
arrayvec                      = { version = "0.7.0" }
hierarchical_hash_wheel_timer = { version = "1.0.0" }
uuid                          = { version = "0.8.2" }
rand                          = { version = "0.8.3" }
dyn-clone                     = { version = "1.0.4" }
