[package]
name = "arc-script-bridge"
version = "0.0.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"
description = "A library for using Arc-Script from Rust."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
arc-script-core  = { version = "=0.0.0", path = "../arc-script-core" }

syn              = { version = "1.0.41", features = ["full"] }
quote            = { version = "1.0.7" }
proc-macro2      = { version = "1.0.21" }
proc-macro-error = { version = "1.0.4" }
