[package]
name = "arc-script-cli"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "arc-script"
path = "src/main.rs"

[features]
default = []
repl    = ["arc-script-repl"]
lsp     = ["arc-script-lsp"]

[dependencies]
arc-script-core    = { path = "../arc-script-core" }
arc-script-lsp     = { path = "../arc-script-lsp",  optional = true }
arc-script-repl    = { path = "../arc-script-repl", optional = true }

clap               = { git = "https://github.com/clap-rs/clap/", features = ["derive"], tag = "v3.0.0-beta.2"}
serde_json         = { version = "1.0.61" }
codespan-reporting = { version = "=0.9.5" }
derive_more        = { version = "0.99.11", default-features = false, features = ["constructor", "from", "into"] }
strum              = { version = "0.20.0", features = ["derive"] }
